--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,6 @@
-<nav>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/todo">Todo</a>
-  <a routerLink="/category">Category</a>
-</nav>
-<router-outlet></router-outlet>
-<!-- Start your project here-->
-<!-- 
+<p>
+  home works!
+</p>
 <div class="container">
   <div class="row mt-5">
     <div class="col-md-12 text-center">
@@ -13,7 +8,25 @@
     </div>
   </div>
   <div class="row mt-5 ">
-    <app-categories></app-categories>
+    <div class="col-md-3 offset-md-2 left-column mb-1">
+      <ul class="list-group">
+        <li *ngFor="let category of categories" class="list-group-item d-flex justify-content-between align-items-center" (click)="onSelect(category)">
+          {{category.name}}
+          <span class="badge primary-color badge-pill">{{countTodosByCat(category.id)}}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <form>
+            <input mdbActive type="text" placeholder="Add new category" id="form1" class="form-control" [(ngModel)]="newCategory.name"
+              (keyup.enter)="addCategory()" name="addCat">
+          </form>
+          <span class="badge primary-color badge-pill">
+            <a class="prefix">
+              <i class="fa fa-plus" aria-hidden="true" (click)="addCategory()"></i>
+            </a>
+          </span>
+        </li>
+      </ul>
+    </div>
     <div class="col-md-5 list mb-1" *ngIf="selectedCategory; else elseBlock">
       <div class="row px-3 py-3">
         <div class="col-md-12">
@@ -58,7 +71,3 @@
     </ng-template>
   </div>
 </div>
--->
-<!-- /Start your project here-->
- 
-
